Setup: static files

--- a/concept/index.html
+++ b/concept/index.html
@@ -17,6 +17,7 @@
                     <li class="active" id="tab-about">about</li>
                     <li id="tab-add">add</li>
                     <li id="tab-search">search</li>
+                    <li id="tab-gift">gift</li>
                 </ul>
             </div>
            
