Dev: partial performance match replace

--- a/extensions/chrome/testing.html
+++ b/extensions/chrome/testing.html
@@ -21,6 +21,11 @@
             <h3></h3>
             <h4></h4>
             <h5>John Adams</h5>
+            <h5>Donald Trump</h5>
+            <h5>Donald J. Trump</h5>
+            <h5>Donald John Trump</h5>
+            <h5>words Donald Trump words</h5>
+            <h5>words Trump words</h5>
             <h5></h5>
         </div>
     </body>
