Dev: main functioning

--- a/extensions/chrome/testing.html
+++ b/extensions/chrome/testing.html
@@ -18,9 +18,9 @@
         <div class="container">
             <h2>Names' Modes of Appearing</h2>
             <hr>
-            <h3></h3>
-            <h4></h4>
             <h5>John Adams</h5>
+            <h5>David Cameron</h5>
+            <h5>words David words Cameron words</h5>
             <h5>Donald Trump</h5>
             <h5>Donald J. Trump</h5>
             <h5>Donald John Trump</h5>
