Dev: chrome extension > update database

--- a/extensions/chrome/popup.html
+++ b/extensions/chrome/popup.html
@@ -5,44 +5,49 @@
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
-        <div id="extTitle">
-            <h1 id="popupTitle">depolitics is active</h1>
+        <div id="ext-title">
+            <h1 id="popup-title">depolitics is active</h1>
         </div>
         <div id="form">
-            <fieldset id="extensionActive">
-                <input type="radio" name="activation" value="extensionOnWiki" id="extensionOnWiki">
-                <span class="radioButton" id="radioButtonOnWiki"></span>
-                <label for="extensionOnWiki">on Wikipedia</label>
+            <fieldset id="extension-active">
+                <input type="radio" name="activation" value="extension-on-wiki" id="extension-on-wiki">
+                <span class="radio-button" id="radio-button-on-wiki"></span>
+                <label for="extension-on-wiki">on Wikipedia</label>
                 <br>
-                <input type="radio" name="activation" value="extensionOnSite" id="extensionOnSite">
-                <span class="radioButton" id="radioButtonOnSite"></span>
-                <label for="extensionOnSite">on every site</label>
+                <input type="radio" name="activation" value="extension-on-site" id="extension-on-site">
+                <span class="radio-button" id="radio-button-on-site"></span>
+                <label for="extension-on-site">on every site</label>
                 <br>
-                <input type="radio" name="activation" value="extensionOff" id="extensionOff">
-                <span class="radioButton" id="radioButtonOff"></span>
-                <label for="extensionOff">off</label><br>
+                <input type="radio" name="activation" value="extension-off" id="extension-off">
+                <span class="radio-button" id="radio-button-off"></span>
+                <label for="extension-off">off</label><br>
             <fieldset>
         </div>
 
-        <div id="underForm">
-            <table id="underFormTable">
+        <div id="under-form">
+            <table id="under-form-table">
                 <tr>
-                    <td class="leftTable">John Adams</td>
-                    <td class="centerTable">becomes</td>
-                    <td class="rightTable">61rqjkfx</td>
+                    <td class="left-table">George Washington</td>
+                    <td class="center-table">becomes</td>
+                    <td class="right-table">sflf6ctg</td>
                 </tr>
                 <tr>
-                    <td class="leftTable">Adolf Hitler</td>
-                    <td class="centerTable">becomes</td>
-                    <td class="rightTable">h6lylne7</td>
+                    <td class="left-table">John Adams</td>
+                    <td class="center-table">becomes</td>
+                    <td class="right-table">70wx0y5q</td>
                 </tr>
             </table>
         </div>
 
-        <div id="adjustOptions">
+        <div id="update-database">
+            <p>update database</p>
+        </div>
+
+        <div id="adjust-options">
             <p>options<p>
         </div>
 
+        <script src="js/contentscript/components/database.js"></script>
         <script src="js/popup_script.js"></script>
     </body>
 </html>
